# founderOSclaudecode

./: .gitignore  CHANGELOG.md  GLOSSARY.md  LICENSE  OVERVIEW.md  README.md  RWS_Business_Proposal_Sunmi.html  RWS_Executive_Summary.html  SYSTEM-CONFIG.md  pyproject.toml
0-external-baseline/: ARCHITECTURE.md  PRODUCT-BASELINE.md  README.md  ROADMAP.md
1-vision/: ADR-product-direction.md  PRD-goals.md  PRD-philosophy.md  WhitePaper.md
2-requirements/: PRD-cognitive-engine.md  PRD-compression-spec.md  PRD-context-lifecycle.md  PRD-functional.md  PRD-work-mode.md  USER-SCENARIOS.md
3-architecture/: ARCHITECTURE-V3.1-outdated.md  INTERFACES.md
4-implementation/: CLAUDE.md  NEXT-SESSION.md  ROADMAP.md  TASK-DECOMPOSITION.md  v0-acceptance.md  v0-task-breakdown.md  v03-acceptance.md
clawhub-skill/focalpoint-memory/: SKILL.md
docs/: USAGE-GUIDE.md  WORK-MODE-GUIDE.md
docs/marketing/: PRODUCT-INTRO.md  USAGE-GUIDE.md
fpms/: __init__.py  analytics.py  mcp_server.py
fpms/narratives/: task-0001.md  task-01e1.md  (+35 more)
tests/: test_adapter_base.py  test_adapter_registry.py  test_analytics.py  test_archive.py  test_bundle.py  test_bundle_cross_source.py  test_dashboard.py  test_e2e.py  test_focus.py  test_fts.py  test_fts_autoindex.py  test_github_adapter.py  test_heartbeat.py  test_knowledge.py  test_m1_e2e.py  test_mcp_server.py  test_models.py  test_narrative.py  test_notion_adapter.py  test_recovery.py  test_risk.py  test_rollup.py  test_sansei.py  test_schema.py  test_store.py  test_tools.py  test_v1_e2e.py  test_validator.py  test_workbench.py  test_writeback.py
(+43 files in other folders)
